--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,35 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".CreateAccountActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".Booking"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".tripAdapter"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".trip"
+            android:exported="false">
+        </activity>
+
+
     </application>
 
 </manifest>
