--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -42,6 +44,10 @@
         </activity>
         <activity
             android:name=".trip"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".PaymentActivity"
             android:exported="false">
         </activity>
 
